Make BaseTest generic to allow assertions for different types of results than String